# shmup

./: .gitignore  LICENSE  README.md  pyproject.toml
src/shmup/: main.py
