[project]
name = "shmup"
version = "0.1"
dependencies = ["pyglet"]

[build-system]
requires = ["setuptools"]

[project.scripts]
shmup_c = "shmup.main:main"

[project.gui-scripts]
shmup = "shmup.main:main"

[tool.pydeploy]
data_dirs = [["data", "data"]]
omit_files = ["libs/app/pyglet/**/x11", "libs/app/pyglet/**/xlib", "libs/app/pyglet/**/wayland", "libs/app/pyglet/**/cocoa","libs/app/pyglet/**/linux", "libs/app/pyglet/**/macos", "libs/app/pyglet/**/darwin","libs/app/pyglet/**/openal","libs/app/pyglet/**/xaudio","libs/app/pyglet/**/pulse","libs/app/pyglet/**/experimental", "libs/app/pyglet/**/*.pyi", "libs/app/pyglet/**/*.typed"]
