[project]
name = "shmup"
version = "0.1"
dependencies = ["pyglet"]

[build-system]
requires = ["setuptools"]

[project.scripts]
shmup_c = "shmup.main:main"

[project.gui-scripts]
shmup = "shmup.main:main"

[tool.pydeploy]
data_dirs = [["data", "data"]]
omit_files = ["libs/libcrypto*.*","libs/*sqlite*","libs/libssl*"]
omit_from_stdlib = ["pydoc_data*","unittest*","email*","asyncio*","mailbox*","pdb*","pydoc*","_pyrepl*","multi*","sqlite*","xml*","_pyexpat*","_ssl*"]